# LunettesVision

Stage-LunettesVideo/: CMakeLists.txt  LunettesVideo  Makefile  cmake_install.cmake
Stage-LunettesVideo/AcquisitionHDR/: README  README~
Stage-LunettesVideo/AcquisitionHDR/.svn/: all-wcprops  entries
Stage-LunettesVideo/AcquisitionHDR/Acquisition/: CalibrageHDR  CalibrageHDR.make  EOS550D.resfunc  HDRfromLDRcollection  HDRfromLDRcollection.make  Makefile  mainCalibrage.cpp~  mainLdrToHdr.cpp  mainLdrToHdr.cpp~  premake4.lua  premake4.lua~
Stage-LunettesVideo/Projet Visual/: Opencv_debug.props  Opencv_release.props
Stage-LunettesVideo/Projet Visual/LunettesVideo/: LunettesVideo.opensdf  LunettesVideo.sln
Stage-LunettesVideo/Suivi/: Compilation Opencv Cuda  Mise en place HDR  Notes.txt  Utilisation-linux
Stage-LunettesVideo/UEye/: 2014-08-29_param_camera.ini  2014-09-02_param_camera_compatible.ini  2014-09-03_param_camera_test.ini  2014-09-04_param_camera_60fps.ini  2014-09-24_param_camera-2.ini  2014-09-24_param_camera.ini  2014-10-03_HDRlogmode.ini  2014-10-06_30fps_RDV_Carnot-2.ini  2014-10-06_30fps_RDV_Carnot.ini  2015-03-09_param_camera_OptiLunettes.ini  2015-03-11_param_camera_HDR.ini  Aide  testGlobaleLinux.ini
Stage-LunettesVideo/res/: params.xml  profile3.xml  profile6.xml
Stage-LunettesVideo/src/: Area.cpp  Area.h  Camera.cpp  Camera.h  FPS.cpp  FPS.h  Function.cpp  Function.h  LunettesVideo.cpp  LunettesVideo.h  Matrix.cpp  Matrix.h  MyTimer.cpp  MyTimer.h  OSD.cpp  OSD.h  OsdNode.cpp  OsdNode.h  Profile.cpp  Profile.h  main.cpp  resource.h
(+167 files in other folders)
